--- a/app/src/main/res/layout/fragment_transfer_money.xml
+++ b/app/src/main/res/layout/fragment_transfer_money.xml
@@ -1,9 +1,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#f0f1ed"
+    android:background="#F1F5F8"
     android:orientation="vertical">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -241,7 +241,6 @@
                             android:layout_height="45dp"
                             android:paddingStart="@dimen/dimen_10dp"
                             android:background="@drawable/edittext_corner"
-                            android:hint="MM/YY"
                             android:inputType="date"
                             android:maxLength="5"
                             android:textColor="@color/textColor" />
@@ -494,7 +493,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/margin_10"
-                android:layout_marginTop="@dimen/margin_10"
+                android:layout_marginTop="20dp"
                 android:layout_marginRight="@dimen/margin_10"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/rounded_corners_button"
