--- a/app/src/main/res/layout/transaction_list.xml
+++ b/app/src/main/res/layout/transaction_list.xml
@@ -9,6 +9,7 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:fitsSystemWindows="true"
         android:background="@drawable/ic_smaller_bg"
         android:theme="@style/AppTheme.AppBarOverlay">
 
