--- a/app/src/main/res/layout/fragment_wallet_loans_list.xml
+++ b/app/src/main/res/layout/fragment_wallet_loans_list.xml
@@ -133,8 +133,8 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="160dp"
-        android:background="@android:color/transparent"
+        android:layout_height="150dp"
+        android:background="@drawable/ic_medium_bg"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <androidx.appcompat.widget.Toolbar
@@ -145,16 +145,7 @@
             android:background="@android:color/transparent"/>
 
     </com.google.android.material.appbar.AppBarLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:src="@drawable/ic_bg"
-            android:scaleType="centerCrop"/>
-    </RelativeLayout>
 
 
 
