--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -27,7 +27,8 @@
                     android:id="@+id/layout_logo"
                     android:layout_width="match_parent"
                     android:layout_height="275dp"
-                    android:background="@color/colorPrimary">
+                    android:background="@drawable/ic_bg"
+                    android:fitsSystemWindows="true">
 
                 </RelativeLayout>
 
@@ -166,7 +167,7 @@
                                 android:layout_centerVertical="true"
                                 android:layout_gravity="right|center_vertical"
                                 android:layout_margin="10dip"
-                                android:src="@drawable/ic_right_arrow">
+                                android:src="@drawable/ic_right_chevron">
 
                             </ImageView>
 
