--- a/app/src/main/res/layout/payment_history.xml
+++ b/app/src/main/res/layout/payment_history.xml
@@ -10,11 +10,11 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="160dp"
-        android:background="@drawable/ic_bg"
+        android:background="@drawable/ic_medium_bg"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar_wallet_loan_status_preview"
+            android:id="@+id/toolbar_payment_history"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
