--- a/app/src/main/res/layout/wallet_purchase_card_preview.xml
+++ b/app/src/main/res/layout/wallet_purchase_card_preview.xml
@@ -3,9 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorAccentLight"
-    tools:context=".activities.wallet.WalletPurchaseCardPreviewActivity" >
+    android:layout_height="wrap_content"
+    android:background="@drawable/solidwhite_shape">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -14,8 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="10dp"
-            android:background="@drawable/solidwhite_shape"
+            android:padding="5dp"
             android:layout_margin="10dp">
 
 
@@ -295,7 +293,7 @@
                     android:layout_centerVertical="true"
                     android:layout_gravity="right|center_vertical"
                     android:layout_margin="10dip"
-                    android:src="@drawable/ic_right_arrow">
+                    android:src="@drawable/ic_right_chevron">
 
                 </ImageView>
 
