--- a/app/src/main/res/layout/activity_login_auth2.xml
+++ b/app/src/main/res/layout/activity_login_auth2.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".activities.TokenAuthActivity">
+    tools:context=".activities.Auth2Activity">
 
     <LinearLayout
         android:layout_width="match_parent"
