--- a/app/src/main/res/layout/login_dialog_otp.xml
+++ b/app/src/main/res/layout/login_dialog_otp.xml
@@ -64,6 +64,7 @@
             android:background="@drawable/outline_primary"
             android:padding="14dp"
             android:textSize="14sp"
+            android:maxLength="1"
             android:inputType="number"/>
         <EditText
             android:id="@+id/otp_code2_et"
@@ -74,6 +75,7 @@
             android:padding="14dp"
             android:background="@drawable/outline_primary"
             android:textSize="14sp"
+            android:maxLength="1"
             android:inputType="number"/>
         <EditText
             android:id="@+id/otp_code3_et"
@@ -84,6 +86,7 @@
             android:padding="14dp"
             android:background="@drawable/outline_primary"
             android:textSize="14sp"
+            android:maxLength="1"
             android:inputType="number"/>
         <EditText
             android:id="@+id/otp_code4_et"
@@ -94,6 +97,7 @@
             android:padding="14dp"
             android:background="@drawable/outline_primary"
             android:textSize="14sp"
+            android:maxLength="1"
             android:inputType="number"/>
     </LinearLayout>
 
